<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_compression_default_plugins</name>
  <version>0.3.2</version>
  <description>Package containing default plugins for compressors</description>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rosbag2_compression</depend>
  <depend>zstd_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosbag2_test_common</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
