<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosbag2_converter_default_plugins</name>
  <version>0.0.0</version>
  <description>Package containing default plugins for format converters</description>
  <maintainer email="karsten.knese@googlemail.com">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosbag2</depend>
  <depend>rmw_fastrtps_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rcutils</test_depend>
  <test_depend>rosbag2</test_depend>
  <test_depend>rosbag2_test_common</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
