<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_converter_default_plugins</name>
  <version>0.1.3</version>
  <description>Package containing default plugins for format converters</description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>pluginlib</depend>
  <depend>poco_vendor</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosbag2</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rcutils</test_depend>
  <test_depend>rmw_fastrtps_cpp</test_depend>
  <test_depend>rosbag2</test_depend>
  <test_depend>rosbag2_test_common</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
