<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_converter_default_plugins</name>
  <version>0.3.6</version>
  <description>Package containing default plugins for format converters</description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>pluginlib</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rcpputils</depend>
  <depend>rmw</depend>
  <depend>rmw_fastrtps_cpp</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rcpputils</test_depend>
  <test_depend>rmw_fastrtps_cpp</test_depend>
  <test_depend>rosbag2_cpp</test_depend>
  <test_depend>rosbag2_test_common</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
